--- a/arch/arm64/configs/wayne_defconfig
+++ b/arch/arm64/configs/wayne_defconfig
@@ -60,6 +60,16 @@ CONFIG_PCI=y
 CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_STUNE_ASSIST=y
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="0-3,6-7"
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_FG="0-3,6-7"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_PREEMPT=y
 CONFIG_HZ_100=y
 CONFIG_MEMORY_HOTPLUG=y
